<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop with Friends</string>

    <!-- BEGIN: Common -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="login">Login</string>
    <string name="rating">Rating</string>
    <string name="sales_reports">Sales Reports</string>
    <string name="location">Location</string>
    <string name="item_description_prompt">Describe the item.</string>
    <string name="item_name">Item Name</string>
    <string name="threshold_price">Threshold Price</string>
    <!-- END: Common -->


    <!-- BEGIN: Login Activity -->
    <string name="user_email_activity_login">Username or Email Address</string>
    <string name="google_activity_login">Sign in with Google</string>
    <string name="sign_in_activity_login">Sign In</string>
    <string name="invalid_input_activity_login">Please enter a valid username.</string>
    <string name="failed_login_activity_login">The username and password combination is invalid.</string>
    <!-- END: Login Activity -->


    <!-- BEGIN: Actions -->
    <string name="action_settings">Settings</string>
    <!-- END: Actions -->

    <!-- BEGIN: Welcome Activity -->
    <string name="title_activity_welcome">Welcome</string>
    <!-- END: Welcome Activity -->

    <!-- BEGIN: Register Activity -->
    <string name="successful_activity_register">Your account has been successfully registered.</string>
    <string name="admin_activity_register">Administrator Status</string>
    <string name="create_username_activity_register">Create a Username</string>
    <string name="create_password_activity_register">Create a Password</string>
    <string name="confirm_password_activity_register">Confirm Password</string>
    <string name="enter_email_activity_register">Enter Email Address</string>
    <!-- END: Register Activity -->

    <!-- BEGIN: Home Activity -->
    <string name="title_activity_home">Home</string>
    <!-- END: Home Activity -->

    <!-- BEGIN: Add Friend -->
    <string name="add_friend">Add Friend</string>
    <string name="added_friend_activity_add_friend">Successfully added friend.</string>
    <string name="failed_friend_activity_add_friend">Failed to add friend. Please check your input</string>
    <string name="title_activity_friend_list">Friend List</string>
    <!-- END: Add Friend -->

    <!-- BEGIN: Friend Profile -->
    <string name="profile">Profile</string>
    <string name="remove_from_friends_activity_profile">Remove from Friends</string>
    <string name="add_to_friends_activity_profile">Add to Friends</string>
    <!-- END: Friend Profile -->

    <!-- BEGIN: Register Interest & Report Sale -->
    <string name="title_activity_register_interest">Register Interest</string>
    <string name="title_activity_report_sale">Report Sale</string>
    <string name="register_interest_activity_register_interest">Register Interest</string>
    <string name="report_sale_activity_report_sale">Report Sale</string>
    <string name="successful_interest_activity_register_interest">Your interest was registered successfully!</string>
    <string name="successful_report_activity_report_sale">Your sale report was generated successfully!</string>
    <!-- END: Register Interest & Report Sale-->

    <!-- BEGIN: View Post -->
    <string name="title_view_post">View Post</string>
    <string name="posted_by">Posted by</string>
    <!-- END: View Post -->

    <!-- BEGIN: Miscellaneous -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pick_location">PickLocationActivity</string>
    <string name="title_activity_maps">Map</string>
    <!-- END: Miscellaneous -->

</resources>
