<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="adjustNothing"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="www.shopwithfriends.com.shopwithfriends.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="false">

        <ImageView android:layout_width="match_parent"
                   android:layout_height="150dp" />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:hint="@string/create_username_activity_register"
                  android:id="@+id/register_txtUsername" />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:hint="@string/create_password_activity_register"
                  android:id="@+id/register_txtPassword"
            android:inputType="textPassword" />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/confirm_password_activity_register"
                  android:layout_marginTop="5dp"
                android:id="@+id/register_txtConfPass"
            android:inputType="textPassword" />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_email_activity_register"
                  android:layout_marginTop="5dp"
                  android:id="@+id/register_txtEmail"
            android:inputType="textEmailAddress" />

        <CheckBox android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
            android:id="@+id/reg_is_admin"
            android:text="@string/admin_activity_register" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Submit"
            android:onClick="btnSubmit_Clicked"
            android:background="@color/button_background"
            android:id="@+id/register_btnSubmit"
            android:enabled="false"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>
