<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.theratio.shopwithfriends.ViewPostActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_name"
        android:id="@+id/item_name"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/threshold_price"
        android:id="@+id/threshold_price"
        android:layout_below="@+id/item_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location"
        android:id="@+id/location"
        android:layout_below="@+id/threshold_price"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_description_prompt"
        android:id="@+id/item_description"
        android:layout_below="@+id/location"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black" />

</RelativeLayout>

