<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:id="@+id/linearLayout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.theratio.shopwithfriends.ReportSaleActivity">

        <EditText
            android:id="@+id/report_sale_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />

        <EditText
            android:id="@+id/report_sale_threshold_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/threshold_price"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/report_sale_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/report_sale_btnLocation" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/report_sale_btnLocation"
            android:adjustViewBounds="false"
            android:layout_gravity="center"
            android:onClick="onbtnLocation"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <EditText
            android:id="@+id/report_sale_item_description"
            android:inputType="textMultiLine"
            android:lines="10"
            android:minLines="8"
            android:gravity="top|start"
            android:maxLines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/item_description_prompt"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/report_sale_activity_report_sale"
            android:id="@+id/report_sale_btn"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="onbtnReportSale"
            android:enabled="false" />



</LinearLayout>